2011-01-24 Rohit Patil
 * 1.6.4 release
 * Modified CLUT interpolation in IccTagLut.cpp to perform clipping on input and no clipping
   on output (as opposed to the other way around).  Fixes crashing bug found with absolute
   intent processing of colors whiter than media point.  Also supports floating point range
   of output for MPE CLUT elements.

2010-10-20 Max Derhak
 * 1.6.3 release
 * Fix typo in CIccTagUnknown::IsSupported()
 * Modified CIccCLUT constructor to support 16bit OutputChannels to support MPE requirements
   for CLUT elements

2010-09-20 Max Derhak
 * 1.6.2 release
 * Fix bugs with reading and displaying metaDataTags using the dictTagType

2010-08-23 Max Derhak
 * 1.6.1 release
 * Modifications to CIccTagLut16 and CIccTagLut8 to correctly track curve mapping when table
   is used as an output table and PCS is XYZ.  In this case M and B curves are swapped since
   the legacy Lut16 and Lut8 tags do not have M curves.
 * Removed check in CIccXform::Create() for BtoD0/DtoB0 tags if BtoDx/DtoBx tag for rendering
   intent not found (as this never made it into the approved specification).
 * Further changes from Joseph Goldstone to eliminate various compiiler warnings
 * Added XCode project to Build Folder
 * Added changes to get build working on Sun/Solaris
 
2010-07-28 Max Derhak
 * 1.6.0 release
 * Moved main Build for Windows systems to Build\MSVC folder with intent to add builds for
   other systems to Build folder
 * Incorporated changes from Joseph Goldstone that eliminate various compiler warnings
 * Modified CIccProfile::Write() to allow for options in how ProfileIDs are created 
   (Example: ByProfileVersion/Always/Never)
 
2010-05-19 Max Derhak
 * Fixed crashing bug with gamut tags with XYZ PCS
 * Modified CLUT::dump to use reflect legacy encoding of when lut16 tags are used

2010-05-06 Max Derhak
 * Modified IccProfLibConf.h and IccConvertUTF.h to properly define 32 bit types for 64 bit
   compilers